--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "dukatools"
-version = "0.1.0"
+version = "0.1.1"
 description = "Small cross-platform CLI toolbelt: treex, dirproc, and more."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -16,6 +16,7 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
+dependencies = ["chardet>=5,<6"]
 
 # Здесь «магия» команд:
 [project.scripts]
