--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "dukatools"
-version = "0.2.0"
+version = "0.3.0"
 description = "Small cross-platform CLI toolbelt: treex, dirproc, and more."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 license = "MIT"
 license-files = ["LICENSE*"]
 authors = [{ name = "rexologue" }]
@@ -28,6 +28,7 @@ dependencies = [
 treex = "dukatools.treex:main"
 dirproc = "dukatools.dirproc:main"
 vidcut = "dukatools.vidcut:main"
+pydown = "dukatools.pydown:main"
 
 # Cсылки для карточки на PyPI
 [project.urls]
